--- a/.vscode/CloudProfiile.html
+++ b/.vscode/CloudProfiile.html
@@ -43,7 +43,7 @@
 	<p>成人後、専門学校を卒業後に地元の精神病院に看護助手として就職するも、8ヶ月後に正体不明のうつの影響で翌年3月に精神病院を退社。</p>
 </div>
 <div class="b4">
-	<p>その後、5年間はバイトをしながら自分探しと心理学を学ぶ。3年目で中国のゲームとの出会いをきっかけに、大きな転換期。4年目にプログラミングと接触</p>
+	<p>その後、4年間バイトをしながら自分探しと心理学を学ぶ。3年目で中国のゲームとの出会いをきっかけに、大きな転換期。4年目にプログラミングと接触</p>
 </div>
 
 <div class="b5">
@@ -73,21 +73,14 @@
 </div>
 
 <div class="massages2">
-	<p>成人してから、過去の辛い出来事から来るうつに悩まされて、社会からブロックアウトしました。社会から離れた後は、自分探しをしながら自分にとって何が一番向いているのかを模索しながら生きていました。今回、YouTubeを開設したのは、「人生を最高の出来事にするために」、視聴者さんと楽しい事を企画したり、ボランティアを通して、助け合いの精神を学びながら、みんなで作り上げるチャンネルにしたいと思ってます！
+	<p>成人してから、過去の辛い出来事から来るうつに悩まされて、社会からブロックアウトしました。社会から離れた後は、自分探しをしながら自分にとって何が一番向いているのかを模索しながら生きていました。そして今は、人生の岐路に立ってます。「２度と、10代の辛い思いをしたくない」「新しい生き方で幸せを見つける」そう思い、エンジニアになることを夢見ながら、追いかけてます。今回、YouTubeを開設したのは、「人生を最高の出来事にするために」、視聴者さんと楽しい企画したり、ボランティアを通して、助け合いの精神を学びながら、みんなで作り上げるチャンネルにしたいと思ってます！
 	</p>
 </div>
-<!-- <div class="b3">
-	<h2></h2>
-</div> -->
-<!-- 
 
-<h2 class="b4"></h2>
+<div class="massages3">
+<p>「人生をより最高の出来事に、今何をするのか一緒に考えよう」</p>
+</div>
 
-	<h2 class="b5"></h2>
-	<h3 class="c1"></h3>
-
-	<h3 class="c2">		
-	</h3> -->
 </div>	
 
 </body>
