--- a/.vscode/Cloudhome.html
+++ b/.vscode/Cloudhome.html
@@ -19,35 +19,62 @@
 				<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
 			</ul>
 		</header>
-		<div class="space">
-			<h1>かつて、底辺のという地獄の底で大空を見ていた少女がいた</h1>
-			<h1>大空を飛ぶことに諦めを感じていた少女</h1>
-			<h1>成人して外の世界に羽ばたくために口を開いた言葉は</h1>
-			<h1>「誰でも飛べるんだ、Cloud Walkerは誰の心の中にいる」</h1>
+		<div class="space1">
+			<p>かつて、底辺という地獄の底で大空を見ていた少女がいた</p>
 		</div>
 
 		<div class="space2">
-			<h2 class="info">
-				Infomation
-		<textarea class="box_srcollber" rows="2">
-			11/26(木) サイト開設
-		</textarea>
+			<p>大空を飛ぶことに諦めを感じていた傷ついてボロボロな一人の少女</p>
 		</div>
-		<div class="space3">
-			<footer>
-				<div class="footmenu">
-					<ul>
-						<li>Home</li>
-								<li>Episode(Getting ready)</li>
-								<li>Profile</li>
-								<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
-					</ul>
-				<h4 class="copy">
-					©️ Cloud Walker Since 1992 in 2020
-				</h4>
-				</div>
-				</footer>
-		</div>
-</body>
 
+		<div class="space3">
+			<p>成人後、傷は癒え心を取り戻した彼女は、外の世界に羽ばたくために口を開いた言葉は</p>
+		</div>
+
+		<div class="space4">
+			<p>「誰でも飛べるんだ、Cloud Walkerは誰の心の中にいる」</p>
+		</div>
+		
+		<div class="space3">
+			
+		</div>
+
+		<div class="info">
+			<p>Infomation</p>
+			<div class="info2">
+				<p>11月26日(木) サイト開設</p>
+				<p>プロフィール開設予定（近日）</p>
+		</div>
+		</div>
+
+			<div class="sns">
+				<p>SNS公式</p>
+				</div>
+
+				<div class="twitter">
+				
+				</div>
+
+				<div class="youtube">
+
+				</div>
+
+				<div class="ameba">
+					<p>アメブロはこちらから</p>
+				</div>
+			
+</body>
+<footer>
+	<div class="footmenu">
+		<ul>
+			<li>Home</li>
+					<li>Episode(Getting ready)</li>
+					<li>Profile</li>
+					<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
+		</ul>
+	<h4 class="copy">
+		©️ Cloud Walker Since 1992 in 2020
+	</h4>
+	</div>
+	</footer>
 </html>
