--- a/.vscode/CloudActive.html
+++ b/.vscode/CloudActive.html
@@ -3,44 +3,85 @@
 <head>
 	<meta charset="UTF-8">
 	<title>
-		Cloud Walker Since 1992 Official site
+		Cloud Walker Since 1992 Active
 	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/favicon cc" href="/Users/wadamika/Desktop/HTMLOFFICIAL/use/favicon.ico">
 </head>
 <body>
-	<link rel="stylesheet" href="contact.css">
+	<link rel="stylesheet" href="cloudactive.css">
 	<header>
 		<div class="menustyle">
+	
 			<ul style="position: absolute;  top:100; left:0;">
 				<li>Home</li>
-				<li>Episode(Getting ready)</li>
 				<li>Profile</li>
-				<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
+				<li>Activity</li>
+				<li>Contact</li>
+				<li>Link&FreandShip</li>
 			</ul>
+		</div>
+		<ul style="position: absolute; top: 30px; ">
+			<li class="twi">
+				<a href="https://twitter.com/CloudWalkertw" target="_blankt"></a>
+			</li>
+			<li class="yt">
+				<a href="https://www.youtube.com/channel/UCfwR7YW6mpTVBrYWJEYfjTg/featured" target="_blanky"></a>
+			</li>
+		</ul>
+		<div class="amebab">
+			<a href="https://ameblo.jp/atom-spacestar666">アメブロ</a>
+		</div>
 		</header>
 
 		<div class="title">
-			
+			<p>Active</p>
 		</div>
 		
 		<div class="ameba">
-			<p>アメブロ
-			</p>
+			<p>アメブロ</p>
+			<p>最新情報</p>
 		</div>
+		<div class="amelink">
+			<a href="https://ameblo.jp/atom-spacestar666/entry-12640869231.html">プログラミング……やるならスクールに行かない方がいい(20/11/30)</a>
+		</a>
 		</div>
+
+		<div class="amelink">
+			<a href="https://ameblo.jp/atom-spacestar666/entry-12640772577.html">誹謗中傷をやめよう……呼びかけるんじゃなくて方法を考えろ(20/11/28</a>
+		</a>
+		</div>
+
+		<div class="amelink">
+		
+			<a href="https://ameblo.jp/atom-spacestar666/entry-12640124450.html">自分が負けた時は、相手を敬うのが大切だよ（朝倉未来さんに）(20/11/25)</a>
+		</div>
+	
+	
+		</div>
+
+	<div class="youtube">
+		<p>YouTube</p>
+		<p>最新情報</p>
+	</div>
+
+<div class="ytlink">
+	<p>--準備中--</p>
+</div>
 			
 </body>
 <footer>
 	<div class="footmenu">
 		<ul>
 			<li>Home</li>
-					<li>Episode(Getting ready)</li>
 					<li>Profile</li>
-					<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
+					<li>Activity</li>
+					<li>Contact</li>
+					<li>Link&FreandShip</li>
 		</ul>
 	<h4 class="copy">
 		©️ Cloud Walker Since 1992 in 2020
 	</h4>
 	</div>
 	</footer>
+	</html>
