--- a/.vscode/CloudProfiile.html
+++ b/.vscode/CloudProfiile.html
@@ -14,10 +14,22 @@
 		<div class="menustyle">
 			<ul style="position: absolute;  top:100; left:0;">
 				<li>Home</li>
-				<li>Episode(Getting ready)</li>
 				<li>Profile</li>
-				<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
+				<li>Activity</li>
+				<li>Contact</li>
+				<li>Link&FreandShip</li>
 			</ul>
+			<ul style="position: absolute; top: 30px; ">
+				<li class="twi">
+					<a href="https://twitter.com/CloudWalkertw" target="_blankt"></a>
+				</li>
+				<li class="yt">
+					<a href="https://www.youtube.com/channel/UCfwR7YW6mpTVBrYWJEYfjTg/featured" target="_blanky"></a>
+				</li>
+			</ul>
+			<div class="amebab">
+				<a href="https://ameblo.jp/atom-spacestar666">アメブロ</a>
+			</div>
 		</header>
 
 		<div class="info">
@@ -88,7 +100,7 @@
 <div class="footmenu">
 	<ul>
 		<li>Home</li>
-				<li>Episode(Getting ready)</li>
+			
 				<li>Profile</li>
 				<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
 	</ul>
