--- a/.vscode/Cloudhome.html
+++ b/.vscode/Cloudhome.html
@@ -12,13 +12,29 @@
 	<link rel="stylesheet" href="cloudhomes.css">
 	<header>
 		<div class="menustyle">
-			<ul style="position: absolute;  top:100; left:0;">
+			<ul style="position: absolute;  top:100; left:50;">
 				<li>Home</li>
-				<li>Episode(Getting ready)</li>
 				<li>Profile</li>
-				<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
+				<li>Activity</li>
+				<li>Contact</li>
+				<li>Link&FreandShip</li>
 			</ul>
+
+			<ul style="position: absolute; top: 30px; ">
+				<li class="twi">
+					<a href="https://twitter.com/CloudWalkertw" target="_blankt"></a>
+				</li>
+				<li class="yt">
+					<a href="https://www.youtube.com/channel/UCfwR7YW6mpTVBrYWJEYfjTg/featured" target="_blanky"></a>
+				</li>
+			</ul>
+			<div class="amebab">
+				<a href="https://ameblo.jp/atom-spacestar666">アメブロ</a>
+			</div>
 		</header>
+	
+		
+	
 		<div class="space1">
 			<p>かつて、底辺という地獄の底で大空を見ていた少女がいた</p>
 		</div>
@@ -34,10 +50,6 @@
 		<div class="space4">
 			<p>「誰でも飛べるんだ、Cloud Walkerは誰の心の中にいる」</p>
 		</div>
-		
-		<div class="space3">
-			
-		</div>
 
 		<div class="info">
 			<p>Infomation</p>
@@ -46,32 +58,46 @@
 				<p>プロフィール開設予定（近日）</p>
 		</div>
 		</div>
+		<div class="amabalink">
+			<a class="twitter-timeline" data-width="500" data-height="500" href="https://twitter.com/CloudWalkertw?ref_src=twsrc%5Etfw">Tweets by CloudWalkertw</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
+
+		<div class="game">
+			<p>Cloud Walkerからの挑戦状！クイズに正解してみよう！</p>
+		</div>
+
+		<div class="game2">
+			クイズはこちらから
+		</div>
+
+		</div>
 
 			<div class="sns">
 				<p>SNS公式</p>
 				</div>
 
 				<div class="twitter">
-				
+					<a href="https://twitter.com/CloudWalkertw" target="_blank1"></a>
 				</div>
 
 				<div class="youtube">
-
+					<a href="https://www.youtube.com/channel/UCfwR7YW6mpTVBrYWJEYfjTg/featured" target="_blank2"></a>
 				</div>
 
 				<div class="ameba">
-					<p>アメブロはこちらから</p>
+					<a href="https://ameblo.jp/atom-spacestar666">アメブロはこちらから</a>
 				</div>
-			
+	
 </body>
 <footer>
 	<div class="footmenu">
+		
 		<ul>
 			<li>Home</li>
-					<li>Episode(Getting ready)</li>
 					<li>Profile</li>
 					<li>Activity</li><li>Contact</li><li>Link&FreandShip</li>
 		</ul>
+		
 	<h4 class="copy">
 		©️ Cloud Walker Since 1992 in 2020
 	</h4>
