--- a/.vscode/Cloudhome.html
+++ b/.vscode/Cloudhome.html
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="space3">
-			<p>成人後、傷は癒え心を取り戻した彼女は、外の世界に羽ばたくために口を開いた言葉は</p>
+			<p>成人後、傷は癒え心を取り戻した。あとは外の世界に羽ばたくだけ。その時、口を開いた言葉は</p>
 		</div>
 
 		<div class="space4">
@@ -63,7 +63,7 @@
 		</div>
 
 		<div class="game">
-			<p>Cloud Walkerからの挑戦状！クイズに正解してみよう！</p>
+			<p>Cloud Walkerからの挑戦状！クイズに答えてみよう！</p>
 		</div>
 
 		<div class="game2">
